create comment for project
